fix: mobile styling increase button size and spacing

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -159,23 +159,23 @@
                     </fieldset>
 
                     <!-- Checkout Buttons -->
-                    <div class="button-group mt-3 d-flex justify-content-between">
+                    <div class="mt-3 d-flex justify-content-between">
 
                         <!-- Keep Shopping Button -->
                         <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
                             <i class="fas fa-chevron-left d-inline me-1"></i>
-                            <p class="d-inline">BACK TO BAG</p>
+                            <p class="d-inline">VIEW BAG</p>
                         </a>
                     
                         <!-- Complete Order Button -->
-                        <button id="submit-button" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
+                        <button id="submit-button" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm">
                             <span class="d-inline me-1">PLACE ORDER</span>
                             <i class="fas fa-lock d-inline"></i>
                         </button>
                     </div>
 
                     <!-- Amount to be charged to card - warning text -->
-                    <p class="text-ib-warning text-end mt-2">
+                    <p class="text-ib-warning text-end mt-3">
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
