--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-    <div class="container-fluid bg-ib-white text-ib-dark px-md-4 pt-4 pb-5 py-md-5 font-body">
+    <div class="container-fluid bg-ib-white text-ib-dark px-md-4 pt-4 pb-0 pb-sm-5 py-md-5 font-body">
         <div class="row pb-5">
 
             <!-- Page Title -->
@@ -23,7 +23,7 @@
                     {{ form.as_p }}
 
                     <!-- Buttons -->
-                    <div class="button-group mt-5 d-flex justify-content-end">
+                    <div class="mt-3 mt-sm-4 d-flex justify-content-end">
 
                         <!-- Cancel Button -->
                         <a href="{% url 'faqs' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
@@ -31,7 +31,7 @@
                         </a>
                     
                         <!-- Submit Button -->
-                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
+                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm">
                             UPDATE FAQ
                         </button>
 
