--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -98,7 +98,7 @@
                     <input type="hidden" name="redirect_url" value="{{ request.GET.next }}">
 
                     <!-- Buttons -->
-                    <div class="button-group mt-5 d-flex justify-content-end">
+                    <div class="mt-5 d-flex justify-content-end">
 
                         <!-- Cancel Button -->
                         <a href="{{ request.GET.next }}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
@@ -106,7 +106,7 @@
                         </a>
                     
                         <!-- Submit Button -->
-                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
+                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm">
                             UPDATE PRODUCT
                         </button>
                     </div>
