--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -128,16 +128,16 @@
                 </div>
 
                 <!-- Buttons -->
-                <div class="button-group my-4 pt-2 pt-md-4 d-flex">
+                <div class="my-4 pt-2 pt-md-4 d-flex">
 
                     <!-- Keep Shopping Button -->
                     <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
                         <i class="fas fa-chevron-left d-inline me-1"></i>
-                        <p class="d-inline">KEEP SHOPPING</p>
+                        <p class="d-inline">BACK TO SHOP</p>
                     </a>
 
                     <!-- Add to Bag (Submit) Button -->
-                    <input type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm" value="ADD TO BAG">
+                    <input type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm" value="ADD TO BAG">
                 </div>
 
                 <!-- Hidden input to redirect user back to current page once added to bag -->
