--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -68,13 +68,13 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
     {% endfor %}
   {% endif %}
 
-  <div class="button-group mt-4 d-flex justify-content-end">
+  <div class="mt-4 d-flex justify-content-end">
     <!-- Home Button -->
     <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
       <p class="d-inline">HOME</p>
     </a>
     <!-- Submit Button -->
-    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit">{% trans "Sign In" %}</button>
+    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-4" type="submit">{% trans "Sign In" %}</button>
   </div>
 
 
