--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,9 +1,9 @@
-<div class="button-group my-3 d-flex justify-content-start justify-content-sm-end">
+<div class="my-3 d-flex justify-content-start justify-content-sm-end">
 
     <!-- Keep Shopping Button -->
     <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
         <i class="fas fa-chevron-left d-inline me-1"></i>
-        <p class="d-inline">KEEP SHOPPING</p>
+        <p class="d-inline">BACK TO SHOP</p>
     </a>
 
     <!-- Checkout Button -->
