--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -93,7 +93,7 @@
                     {% endif %}
 
                     <!-- Buttons -->
-                    <div class="button-group mt-5 d-flex justify-content-end">
+                    <div class="mt-5 d-flex justify-content-end">
 
                         <!-- Cancel Button -->
                         <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
@@ -101,7 +101,7 @@
                         </a>
                     
                         <!-- Submit Button -->
-                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
+                        <button type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm">
                             ADD PRODUCT
                         </button>
                     </div>
