--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -24,7 +24,7 @@
     <fieldset class="blockLabels">
 
       {% for emailaddress in user.emailaddress_set.all %}
-        <div class="ctrlHolder">
+        <div class="ctrlHolder mb-2">
           <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
 
             <input id="email_radio_{{forloop.counter}}" type="radio" name="email"
@@ -82,16 +82,16 @@
   {% endif %}
 
   <!-- Buttons -->
-  <div class="button-group mt-3 d-flex justify-content-end">
+  <div class="mt-3 d-flex justify-content-end">
 
     <!-- Back To Profile -->
     <a href="{% url 'profile' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
         <i class="fas fa-chevron-left d-inline me-1"></i>
-        <p class="d-inline">BACK TO PROFILE</p>
+        <p class="d-inline">PROFILE</p>
     </a>
 
     <!-- Submit Button -->
-    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase ms-3" name="action_add" type="submit">
+    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase ms-4" name="action_add" type="submit">
         {% trans "Add E-mail" %}
     </button>
   </div>
