--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -56,13 +56,13 @@
       {% endfor %}
   {% endif %}
 
-  <div class="button-group mt-4 d-flex justify-content-end">
+  <div class="mt-4 d-flex justify-content-end">
     <!-- Home Button -->
     <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
       <p class="d-inline">HOME</p>
     </a>
     <!-- Submit Button -->
-    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit">{% trans "Sign Up" %}</button>
+    <button class="primaryAction ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-4" type="submit">{% trans "Sign Up" %}</button>
   </div>
 
   {% if redirect_field_value %}
