--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -8,7 +8,7 @@
 
             <!-- Decrement Button -->
             <div class="input-group-prepend">
-                <button class="decrement-qty decrement-qty-sm bg-blue text-ib-light weight-bold btn rounded-0 d-flex justify-content-center align-items-center decrement-qty_{{ item.item_id }}" 
+                <button class="decrement-qty bg-blue text-ib-light weight-bold btn rounded-0 d-flex justify-content-center align-items-center decrement-qty_{{ item.item_id }}" 
                     data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
@@ -18,7 +18,7 @@
             </div>
 
             <!-- Quantity Input -->
-            <input class="form-control qty_input qty-input-sm ib-form-field font-body weight-semibold id_qty_{{ item.item_id }}" type="number"
+            <input class="form-control qty_input ib-form-field font-body weight-semibold id_qty_{{ item.item_id }}" type="number"
                 name="quantity"
                 value="{{ item.quantity }}"
                 min="1"
@@ -27,7 +27,7 @@
 
             <!-- Increment Button -->
             <div class="input-group-append">
-                <button class="increment-qty increment-qty-sm bg-blue text-ib-light weight-bold btn rounded-0 d-flex justify-content-center align-items-center increment-qty_{{ item.item_id }}"
+                <button class="increment-qty bg-blue text-ib-light weight-bold btn rounded-0 d-flex justify-content-center align-items-center increment-qty_{{ item.item_id }}"
                     data-item_id="{{ item.item_id }}">
                     <i class="fas fa-plus fa-sm"></i>
                     <span class="sr-only">Increase Quantity</span>
