fix: increase spacing on footer links for mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -202,40 +202,40 @@
                 <div class="row">
 
                     <!-- Social Links -->
-                    <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
-                        <h1 class="text-yellow weight-semibold mb-2">THE BUZZ</h1>
-                        <a class="d-block text-decoration-none mb-2" href="https://www.facebook.com/" target="_blank" aria-label="Facebook - Opens in a new tab">
+                    <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-2">
+                        <h1 class="text-yellow weight-semibold mb-3">THE BUZZ</h1>
+                        <a class="d-block text-decoration-none mb-3" href="https://www.facebook.com/" target="_blank" aria-label="Facebook - Opens in a new tab">
                             <i class="fa-brands fa-facebook text-yellow text-center d-inline"></i>
                             <p class="text-ib-light d-inline footer-link-text">Facebook</p>
                         </a>
-                        <a class="d-block text-decoration-none mb-2" href="https://www.instagram.com/" target="_blank" aria-label="Instagram - Opens in a new tab">
+                        <a class="d-block text-decoration-none mb-3" href="https://www.instagram.com/" target="_blank" aria-label="Instagram - Opens in a new tab">
                             <i class="fa-brands fa-instagram text-yellow text-center d-inline"></i>
                             <p class="text-ib-light d-inline footer-link-text">Instagram</p>
                         </a>
-                        <a class="d-block text-decoration-none mb-2" href="https://www.pinterest.co.uk/" target="_blank" aria-label="Pinterest - Opens in a new tab">
+                        <a class="d-block text-decoration-none mb-3" href="https://www.pinterest.co.uk/" target="_blank" aria-label="Pinterest - Opens in a new tab">
                             <i class="fa-brands fa-pinterest text-yellow text-center d-inline"></i>
                             <p class="text-ib-light d-inline footer-link-text">Pinterest</p>
                         </a>
-                        <a class="d-block text-decoration-none mb-2" href="https://twitter.com/" target="_blank" aria-label="Twitter - Opens in a new tab">
+                        <a class="d-block text-decoration-none" href="https://twitter.com/" target="_blank" aria-label="Twitter - Opens in a new tab">
                             <i class="fa-brands fa-twitter text-yellow text-center d-inline"></i>
                             <p class="text-ib-light d-inline footer-link-text">Twitter</p>
                         </a>
                     </div>
         
                     <!-- More Info -->
-                    <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
-                        <h1 class="text-yellow weight-semibold mb-2">MORE INFO</h1>
+                    <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-2">
+                        <h1 class="text-yellow weight-semibold mb-3">MORE INFO</h1>
                         <a class="d-block text-decoration-none" href="{% url 'faqs' %}">
-                            <p class="text-ib-light mb-2 footer-link-text">FAQs</p>
+                            <p class="text-ib-light mb-3 footer-link-text">FAQs</p>
                         </a>
                         <a class="d-block text-decoration-none" href="{% url 'contact_us' %}">
-                            <p class="text-ib-light mb-2 footer-link-text">CONTACT US</p>
+                            <p class="text-ib-light footer-link-text">CONTACT US</p>
                         </a>
                     </div>
         
                     <!-- About Us -->
                     <div class="upper-footer-section col-12 col-sm-6 col-md-8">
-                        <h1 class="text-yellow weight-semibold mb-2">ABOUT US</h1>
+                        <h1 class="text-yellow weight-semibold mb-3">ABOUT US</h1>
                         <p class="text-ib-light">Island Bees was founded in 2012 by 2 Anglesey beekeepers with more honey and bees than they knew what to do with.  We stock a range of honey & bee-based products as well as beekeeping kit, you can also order bees from us, all our bees are fully health checked, we only sell strong, healthy colonies. Our award-winning courses run throughout the summer if you're keen to learn more about bees and beekeeping.</p>
                         <p class="text-ib-light"><em>Site is built for educational purposes and all products are entirely fictional. Transactions are made using Stripe's test mode and no money or products will be sent or received.</em></p>
                     </div>
@@ -245,7 +245,7 @@
             <!-- Lower Footer -->
             <div class="container-fluid bg-ib-dark d-flex font-body text-ib-light px-4 py-3">
                 <div class="row w-100 ib-row d-flex align-items-end p-0">
-                    <p class="weight-light col-12 col-lg-8 col-xl-8 text-center text-lg-start lower-footer-text mb-2 mb-lg-0">ISLAND BEES IS A FULL STACK DJANGO SITE BUILT FOR EDUCATIONAL PURPOSES ONLY</p>
+                    <p class="weight-light col-12 col-lg-8 col-xl-8 text-center text-lg-start lower-footer-text mb-3 mb-lg-0 p-0">ISLAND BEES IS A FULL STACK DJANGO SITE BUILT FOR EDUCATIONAL PURPOSES ONLY</p>
                     <div class="col-12 col-lg-4 col-xl-4 text-center px-0" id="lower-footer-links">
                         <p class="weight-semibold d-inline me-2 lower-footer-text me-3 mb-2 mb-lg-0">© EMMA HEWSON</p>
                         <div class="d-inline">
