--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -12,7 +12,7 @@
             <a class="font-body weight-semibold nav-link lower-nav-link" href="#" id="products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <p class="text-dark lower-nav-link-text">PRODUCTS</p>
             </a>
-            <div class="dropdown-menu border-0 px-3 lower-nav-dropdown bg-ib-light" aria-labelledby="products-link">
+            <div class="dropdown-menu border-0 px-0 px-lg-3 lower-nav-dropdown bg-ib-light" aria-labelledby="products-link">
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}">
                     <div>
                         <div class="category-icon-circle bg-ib-dark">
