--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -47,13 +47,13 @@
                 <div class="dropdown-menu text-end border-0 account-dropdown shadow bg-ib-light font-body" aria-labelledby="user-options-mobile">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
-                    <a href="{% url 'manage' %}" class="dropdown-item py-2 upper-nav-link-text">Site Management</a>
+                    <a href="{% url 'manage' %}" class="dropdown-item py-2 my-1 upper-nav-link-text">Site Management</a>
                     {% endif %}
-                    <a href="{% url 'profile' %}" class="dropdown-item py-2 upper-nav-link-text">My Profile</a>
-                    <a href="{% url 'account_logout' %}" class="dropdown-item py-2 upper-nav-link-text">Sign Out</a>
+                    <a href="{% url 'profile' %}" class="dropdown-item py-2 my-1 upper-nav-link-text">My Profile</a>
+                    <a href="{% url 'account_logout' %}" class="dropdown-item py-2 my-1 upper-nav-link-text">Sign Out</a>
                     {% else %}
-                    <a href="{% url 'account_signup' %}" class="dropdown-item py-2 upper-nav-link-text">Register</a>
-                    <a href="{% url 'account_login' %}" class="dropdown-item py-2 upper-nav-link-text">Sign In</a>
+                    <a href="{% url 'account_signup' %}" class="dropdown-item py-2 my-1 upper-nav-link-text">Register</a>
+                    <a href="{% url 'account_login' %}" class="dropdown-item py-2 my-1 upper-nav-link-text">Sign In</a>
                     {% endif %}
                 </div>
             </li>
