test: test onerror alt for images on 500.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -306,6 +306,7 @@ button {
 
 .ib-button-yellow:hover {
     background: var(--yellow-hov);
+    border: none !important;
 }
 
 .ib-button-warning:hover {
