--- a/templates/403.html
+++ b/templates/403.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_title %}- 404! Page Doesn't Exist!{% endblock %}
+{% block extra_title %}- 403! Request forbidden!{% endblock %}
 
 {% block extra_meta %}
-    <meta name="description" content="WELCOME TO ISLAND BEES - 404! Page doesn't exist!">
+    <meta name="description" content="WELCOME TO ISLAND BEES - 403! Request forbidden!">
 {% endblock %}
 
 {% block content %}
