--- a/templates/400.html
+++ b/templates/400.html
@@ -13,9 +13,9 @@
 
     <!-- Error Page Content -->
     <div class="d-flex justify-content-center align-items-center mb-3 mt-4">
-        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="error-bee">
+        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="error-bee" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/bee-2.png"'>
         <h1 class="font-title error-title text-center mx-3 ib-lh-1">400</h1>
-        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="backwards error-bee">
+        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="backwards error-bee" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/bee-2.png"'>
     </div>
     <p>Bad request! Sorry!</p>
     
