fix: change logo, favicon & Error 500 page to absolute URLs for images

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,11 @@
         {% block corecss %}
         
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/apple-touch-icon.png"'>
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/favicon-32x32.png"'>
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/favicon-16x16.png"'>
-        <link rel="icon" type="image/png" sizes="192x192" href="{{ MEDIA_URL }}android-chrome-192x192.png" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/android-chrome-192x192.png"'>
-        <link rel="icon" type="image/png" sizes="512x512" href="{{ MEDIA_URL }}android-chrome-512x512.png" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/android-chrome-512x512.png"'>
+        <link rel="apple-touch-icon" sizes="180x180" href="https://island-bees.s3.amazonaws.com/media/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://island-bees.s3.amazonaws.com/media/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://island-bees.s3.amazonaws.com/media/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="https://island-bees.s3.amazonaws.com/media/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="https://island-bees.s3.amazonaws.com/media/android-chrome-512x512.png">
 
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -55,7 +55,7 @@
                 <!-- Logo -->
                 <div class="logo-div font-title col-12 col-lg-4 my-auto">
                     <a href="{% url 'home' %}" class="nav-link">
-                        <img src="{{ MEDIA_URL }}logo.svg" alt="Island Bees Logo" class="logo-img me-2" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/logo.svg"'>
+                        <img src="https://island-bees.s3.amazonaws.com/media/logo.svg" alt="Island Bees Logo" class="logo-img me-2">
                         <div class="logo-text my-auto">
                             <h2 class="font-title weight-bold">ISLAND BEES</h2>
                             <p class="weight-regular">FOR ALL YOUR BEES' NEEDS</p>
