--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -14,7 +14,7 @@
     <!-- Logo -->
     <div class="logo-div-mobile col-2 my-auto font-title text-center d-none d-sm-block">
         <a href="{% url 'home' %}" class="nav-link">
-            <img src="{{ MEDIA_URL }}logo.svg" alt="Island Bees Logo" class="logo-img-mobile" onerror='this.onerror=null;this.src="https://island-bees.s3.amazonaws.com/media/logo.svg"'>
+            <img src="https://island-bees.s3.amazonaws.com/media/logo.svg" alt="Island Bees Logo" class="logo-img-mobile">
             <div class="logo-text-mobile">
                 <h2 class="font-title weight-bold">ISLAND BEES</h2>
             </div>
