fix: fix wrong link on forgot password page

--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -38,7 +38,7 @@
 
         <div class="mt-4 d-flex justify-content-end">
             <!-- Home Button -->
-            <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+            <a href="{% url 'home' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
               <p class="d-inline">HOME</p>
             </a>
             <!-- Submit Button -->
