--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -70,7 +70,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
   <div class="mt-4 d-flex justify-content-end">
     <!-- Home Button -->
-    <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+    <a href="{% url 'home' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
       <p class="d-inline">HOME</p>
     </a>
     <!-- Submit Button -->
